unpackaged/main/default/objects/hed__Term__c/fields/Last_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Enrollment_Date__c</fullName>
    <description>Last Date a Student is able to register for this term including all mini terms. GioM 7/72023</description>
    <inlineHelpText>Last Date a Student is able to register for this term including all mini terms.</inlineHelpText>
    <label>Last Enrollment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>