unpackaged/main/default/objects/hed__Term__c/fields/MDC_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>MDC_Term_ID__c</fullName>
    <externalId>true</externalId>
    <label>MDC Term ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>