unpackaged/main/default/objects/hed__Term__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>holds ShortDescr from PeopleSoft</description>
    <label>Short Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>