unpackaged/main/default/objects/hed__Term__c/fields/traa_Open_for_Applications__c.field-meta.xml
<CustomField>
    <fullName>traa_Open_for_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open for Applications</label>
    <type>Checkbox</type>
</CustomField>